# MemSaver

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_CN.md  README.md  README_CN.md  build.sh  rebuild_prd.md  rebuild_prompt.md  rebuild_prompt_model.md  setup.py  设计文档.md
allocator/: allocator.cpp  allocator.h
cmake/: MemSaverConfig.cmake.in
csrc/: api_forwarder.cpp  core.cpp  core.h  macro.h  utils.h
include/memsaver/: entrypoint.h  memsaver.hpp  memsaver_c.h
src/: entrypoint.cpp  memsaver_c.cpp  preload.cpp
src/internal/: common.h  context_impl.cpp  context_impl.h  cuda_utils.h  original_cuda_api.cpp  original_cuda_api.h  utils.h  vmm.h
test/: test_configure_subprocess.py  test_model_reload.py
tests/: arena_test.cpp  basic_test.cpp  model_load_test.cpp  run_all_cpp_tests.sh  run_torch_arena_test.sh  run_torch_basic_test.sh  test_utils.h  测试项目.md
tests/cpp/: basic_test.cpp  core_tests.cpp  preload_smoke.cpp  run_all_cpp_tests.sh  run_torch_basic_test.sh  测试项目.md
tests/sh/: run_all_cpp_tests.sh  run_torch_arena_test.sh  run_torch_basic_test.sh  run_torch_model_load_test.sh
tests/utils/: model_loader.cpp  model_loader.h  test_utils.h
torch_memory_saver/: entrypoint.py  testing_utils.py
torch_memory_saver/hooks/: mode_preload.py
